# GLSLRayTracingStudio

./: .gitignore  CMakeLists.txt  LICENSE  README.md
assets/env/: output_skybox.hdr  studio_small_02.hdr  venetian_crossroads.hdr
assets/shaders/: frag.glsl  skybox.frag  skybox.vert  vert.glsl
assets/shaders/ibl/: Fullscreen.vert  IBLFiltering.frag  PanoramaToCubemap.frag
assets/shaders/pbr/: PBR_Metallic.shader  PBR_Specular.shader  frag.glsl  vert.glsl
src/: .editorconfig  CMakeLists.txt  main.cpp
src/Base/: Base.cpp  Base.h  Buffer.cpp  Buffer.h  GLWindow.cpp  GLWindow.h  Mesh.cpp  Mesh.h  Renderer.h  SceneView.cpp  SceneView.h
src/Bvh/: Bvh.cpp  Bvh.h  BvhTranslator.cpp  BvhTranslator.h  SplitBvh.cpp  SplitBvh.h
src/Common/: Assert.h  Common.h  Log.cpp  Log.h
src/Core/: Program.cpp  Program.h  Quad.cpp  Quad.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
src/Job/: Runnable.h  RunnableThread.cpp  RunnableThread.h  TaskThread.cpp  TaskThread.h  TaskThreadPool.cpp  TaskThreadPool.h  ThreadEvent.cpp  ThreadEvent.h  ThreadManager.cpp  ThreadManager.h  ThreadTask.h
src/Math/: Axis.h  Bounds3D.h  GenericPlatformMath.cpp  GenericPlatformMath.h  Math.cpp  Math.h  Matrix4x4.h  Plane.h  PlatformMath.h  Quat.h  Rectangle.h  Rectangle2D.h  Vector2.h  Vector3.h  Vector4.h  WindowsPlatformAtomics.h  WindowsPlatformMath.h
src/Misc/: FileMisc.cpp  FileMisc.h  JobManager.cpp  JobManager.h  WindowsMisc.cpp  WindowsMisc.h
src/Parser/: GLTFParser.cpp  GLTFParser.h  HDRParser.cpp  HDRParser.h  stb_image.cpp  stb_image_resize.cpp  stb_image_write.cpp  tiny_gltf.cpp  tiny_gltf.h
src/Renderer/: IBLSampler.cpp  IBLSampler.h  PBRRenderer.cpp  PBRRenderer.h  RayTracingRenderer.cpp  RayTracingRenderer.h  SkyBox.cpp  SkyBox.h
src/UI/: UISceneView.cpp  UISceneView.h
src/View/: Icons.cpp  Icons.h  Scene3DView.cpp  Scene3DView.h  UISceneView.cpp  UISceneView.h
src/View/Components/: ImguiHelper.cpp  ImguiHelper.h  LogPanel.cpp  LogPanel.h  MainMenuBar.cpp  MainMenuBar.h  ProjectPanel.cpp  ProjectPanel.h  PropertyPanel.cpp  PropertyPanel.h
